@@ -1,1 +1,2 @@
 wiringpi
+picamera
